tests/NormalTests/paczka1/fuzzy1/36977446.err
Error in line 4: ExIHv50 S131 89,6
Error in line 2: FYhm0Wqmei S849 36,4
Error in line 25: ENtoJYX9 S849 48,0
Error in line 20: FYhm0Wqmei S131 88,3
Error in line 31: FYhm0Wqmei A703 22,0
